Move subscription actions / types over to Echo, remove go-chi, remove other endpoints
